--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,14 @@ h1{
     justify-content: center;
     margin-top: 15px;
 }
+
+#explicacion{
+    margin-left: 17%;
+    margin-right: 17%;
+    padding-left: 2%;
+    padding-right: 2%;
+    display: flex;
+    text-align: justify;
+    background-color: rgb(179, 196, 228);
+    border-radius: 10px;
+}
